Do not fail on non HP hardware
Signed-off-by: Sébastien Gross <seb•ɑƬ•chezwam•ɖɵʈ•org>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,3 +1,9 @@
+---
+
+## Run the HP rule.
+#
+# set to no if you don't want to install HP tools on the server.
+hp_run_role: yes
 
 ## overide the current host HOSTNAME.
 #
