--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,125 +1,4 @@
 ---
 
-
-- name: Install APT sources for HP systems
-  apt_repository:
-    repo: '{{ item.1.repo }}'
-    update_cache: no
-  notify: apt-get update
-  when:
-    item.0.name == '{{ ansible_lsb.codename }}'
-  with_subelements_safe:
-    - hp_apt_repositories
-    - repositories
-
-- meta: flush_handlers
-
-
-- name: add HP apt-key
-  apt_key:
-    url: '{{ item.url }}'
-    id: '{{item.id}}'
-  with_items: hp_apt_keys
-  when: hp_apt_keys is defined
-
-  
-- name: disable upstart services for non HP systems
-  copy:
-    content=manual
-    dest='/etc/init/{{ item }}.override'
-  # Need to be disabled for old hosts that do not come with upstart
-  when:
-    ansible_system_vendor not in ['HP']
-    and ansible_lsb.codename not in [ 'squeeze' ]
-  with_items:
-    - hp-asrd
-    - hp-health
-
-
-- name: create HP directories
-  file:
-    path: '{{ item.path }}'
-    mode: '{{ item.mode|default("0644") }}'
-    owner: '{{ item.owner|default("root") }}'
-    group: '{{ item.group|default("root") }}'
-    state: '{{ item.state|default("directory") }}'
-  with_items: hp_directories_to_create
-  when: hp_directories_to_create is defined
-
-- name: create hp-health log file
-  command:
-    touch /var/log/hp-health/hpasmd.log
-  args:
-    creates: /var/log/hp-health/hpasmd.log
-    
-- name: install HP utils
-  apt:
-    pkg: '{{item}}'
-    install_recommends: no
-    force: yes
-    update_cache: yes
-    cache_valid_time: 3600
-  with_items:
-    - hponcfg
-    - lib32stdc++6
-  ignore_errors: true
-
-- name: install distribution specific tools (hpacucli)
-  apt:
-    pkg: '{{item.pkg}}'
-    install_recommends: no
-    force: yes
-    update_cache: yes
-    cache_valid_time: 3600
-    purge: '{{ item.purge | default(False)}}'    
-    state: '{{ item.state | default("present") }}'
-  ignore_errors: true
-  with_items:
-    - pkg: hpacucli
-  when: ansible_lsb.codename not in [ 'trusty' ]
-
-# For recent hardware (Gen9) use hpssacli instead of hpacucli
-- name: install distribution specific tools (hpssacli)
-  apt:
-    pkg: '{{item.pkg}}'
-    install_recommends: no
-    force: yes
-    update_cache: yes
-    cache_valid_time: 3600
-    purge: '{{ item.purge | default(False )}}'
-    state: '{{ item.state | default("present") }}'
-  ignore_errors: true
-  with_items:
-    - pkg: hpssacli
-    - { pkg: hpacucli, state: absent, purge: yes }
-  when: ansible_lsb.codename in [ 'trusty' ]
-
-# Many scripts use hpacucli, thus be retro compatible.
-- name: Create symbolic link from hpssacli to hpacucli
-  file:
-    dest: /usr/sbin/hpacucli
-    src: /usr/sbin/hpssacli
-    state: link
-  when: ansible_lsb.codename in [ 'trusty' ]
-  
-- name: Copy HP specific files
-  copy:
-    src: '{{ item.src }}'
-    dest: '/{{ item.dest|default(item.src) }}'
-    mode: '{{ item.mode|default("0644") }}'
-    owner: '{{ item.owner|default("root") }}'
-    group: '{{ item.group|default("root") }}'
-  with_items: hp_files_to_copy
-  when: hp_files_to_copy is defined
-
-- name: Generate HP specific configuration files
-  template:
-    src: '{{ item.src }}'
-    dest: '/{{ item.dest|default(item.src) }}'
-    mode: '{{ item.mode|default("0644") }}'
-    owner: '{{ item.owner|default("root") }}'
-    group: '{{ item.group|default("root") }}'
-  with_items: hp_templates_to_copy
-  when: hp_templates_to_copy is defined
-  
-# - include: nagios.yml
+- include: run.yml
+  when: not (hp_run_role | default(False))
